# codeIn23

./: README.md  token
build-generateMaterialCard-Desktop-Debug/: CMakeCache.txt  FLUKAMaterial  FLUKAMaterial.cbp  Makefile  cmake_install.cmake
build-generateMaterialCard-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f83753a0da8a4c9ad6f4.json  cmakeFiles-v1-da418e6d922d1372ca79.json  codemodel-v2-9351344db16c1ce067ec.json  index-2023-08-07T09-18-20-0191.json  target-FLUKAMaterial-Debug-15f2e5c72d57377bdac2.json  target-FLUKAMaterial_autogen-Debug-6cc97bbff56e36fce3d7.json
build-generateMaterialCard-Desktop-Debug/FLUKAMaterial_autogen/: moc_predefs.h
generateMaterialCard/: CMakeLists.txt  Makefile  flukaInput.pro  main.cpp  material.cpp  material.h
generateMaterialCard/config/: elementIndex.txt  materialData.txt  materialDensity.txt  materilaName.txt
readDicom/build-readDicom-Desktop-Debug/: Makefile  moc_mainwindow.cpp
readDicom/readDicom/: main.cpp
readFLUKA/: CMakeLists.txt  FDC_Dealing.pro  cflukadose.cpp  cflukadose.h  externdata.cpp  externdata.h  idddata.cpp  idddata.h  log4cpp.config  main.cpp
